kubernetes/media/sabnzd/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
  namespace: media
spec:
  serviceName: "sabnzbd"
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      securityContext:
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:4.2.3-ls156
          resources:
            requests:
              cpu: 1
              memory: 500Mi
              ephemeral-storage: 32Gi
            limits:
              cpu: 2
              memory: 4Gi
              ephemeral-storage: 32Gi
          ports:
            - name: sabnzb-http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: sabnzbd-data
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: sabnzbd-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 32Gi
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
    - port: 8080
      name: sabnzbd-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &sabnzbIngress nzbd.mcmumf.dev
      secretName: sabnzbd-cert
  rules:
    - host: *sabnzbIngress
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
